# cnn

./: .gitignore  Cargo.toml  README.md
network/: Cargo.toml
network/src/: main.rs
testfunc/: Cargo.toml
testfunc/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/activation/: mod.rs
utils/src/convolution/: mod.rs
utils/src/dataset/: mod.rs
utils/src/full_connected/: mod.rs
utils/src/network/: mod.rs
utils/src/pooling/: mod.rs
utils/src/propagation/: mod.rs
utils/src/trained/: activation.rs  convolution.rs  full_connected.rs  mod.rs  pooling.rs
utils/src/utils/: error_check.rs  mod.rs  utils.rs
