[package]
name = "utils"
version = "0.1.0"
authors = ["SimonWang9610 <55259373+SimonWang9610@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
ndarray-rand = "0.11"
rand = "0.7"